--- a/tda-notebooks/02_Mapper_Breast-Cancer_classic.ipynb
+++ b/tda-notebooks/02_Mapper_Breast-Cancer_classic.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,20 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import plotly.graph_objs as go\n",
     "from ipywidgets import (HBox, VBox)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -150,35 +143,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    import ipywidgets\n",
-    "    from distutils.version import LooseVersion\n",
-    "    if LooseVersion(ipywidgets.__version__) >= LooseVersion('7.0.0'):\n",
-    "        from ._figurewidget import FigureWidget\n",
-    "    del LooseVersion\n",
-    "    del ipywidgets\n",
-    "except ImportError:\n",
-    "    print('tumadre')\n",
-    "    pass"
+    "# try:\n",
+    "#     import ipywidgets\n",
+    "#     from distutils.version import LooseVersion\n",
+    "#     if LooseVersion(ipywidgets.__version__) >= LooseVersion('7.0.0'):\n",
+    "#         from ._figurewidget import FigureWidget\n",
+    "#     del LooseVersion\n",
+    "#     del ipywidgets\n",
+    "# except ImportError:\n",
+    "#     print('tumadre')\n",
+    "#     pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'plotly.graph_objs' has no attribute 'FigureWidget'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-0dc5c5308da3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m                      bgcolor=bgcolor)\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mfw_graph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFigureWidget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mplotly_graph_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlayout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m fw_hist = node_hist_fig(colorf_distribution, bgcolor=bgcolor,\n\u001b[1;32m     10\u001b[0m                         y_gridcolor=y_gridcolor)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'plotly.graph_objs' has no attribute 'FigureWidget'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plotly_graph_data = plotly_graph(kmgraph, graph_layout='fr', colorscale=my_colorscale, \n",
     "                                 factor_size=2.5, edge_linewidth=0.5)\n",
@@ -206,18 +187,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9159699fb57941c59692c03828fa7a43",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FigureWidget({\n",
+       "    'data': [{'hoverinfo': 'none',\n",
+       "              'line': {'color': 'rgb(180,180,…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "VBox([fw_graph, HBox([fw_summary, fw_hist])])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c37754162a4c4cab95fb497f00656aed",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(FigureWidget({\n",
+       "    'data': [{'hoverinfo': 'none',\n",
+       "              'line': {'color'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "dashboard"
    ]
@@ -240,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,9 +310,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dae4994a138640688c0ccc23ddf7e085",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FigureWidget({\n",
+       "    'data': [{'hoverinfo': 'none',\n",
+       "              'line': {'color': 'rgb(180,180,…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "HBox([fwn_graph, fw1])"
    ]
@@ -324,16 +356,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise \n",
-    "- define a new filter, based on the Nicolau paper: https://www.pnas.org/content/108/17/7265 , can you get the branching?\n",
-    "- ...."
+    "# Savior code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    .container { width:100% !important; }\n",
+       "    .output_scroll {height: 800px !important;}\n",
+       "    </style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=breast_cancer_mapper_classic.html width=100%% height=800 frameBorder=\"0\"></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "html = mapper.visualize(scomplex, path_html=\"breast_cancer_mapper_classic.html\",\n",
     "                 title=\"breast cancer\")\n",
@@ -342,6 +400,15 @@
     "# jupyter.display(path_html=\"http://mlwave.github.io/tda/word2vec-gender-bias.html\")\n",
     "from kmapper import jupyter\n",
     "jupyter.display(path_html=\"breast_cancer_mapper_classic.html\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise \n",
+    "- define a new filter, based on the Nicolau paper: https://www.pnas.org/content/108/17/7265 , can you get the branching?\n",
+    "- ...."
    ]
   }
  ],
@@ -361,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
